# mathinterpreter

./: .gitignore  README.md  coverage.json  main.py  pyproject.toml  snapcraft.yaml
.github/workflows/: black.yml  python-package.yml
doc/guides/: contributing.md
mathinterpreter/: __init__.py  __main__.py  calculate.py  interpreter.py  lexer.py  main.py  nodes.py  parser.py  tokens.py
tests/: calculate_test.py  interpreter_test.py  lexer_test.py  parser_test.py
