[build-system]
requires = ["setuptools >= 69", "setuptools_scm>8"]
build-backend = "setuptools.build_meta"

[project]
name = "mathinterpreter"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest >= 8.0", "coverage >=7.0", "black >= 24.0"]

[project.scripts]
mathinterpreter = "mathinterpreter.__main__:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.setuptools_scm]